Fixed scroll issue. Icons alignment fix

--- a/src/sass/homepage.sass
+++ b/src/sass/homepage.sass
@@ -34,9 +34,10 @@
 
   .bottom-div
     display: flex
-    flex: row wrap
+    flex-flow: row wrap
     align-self: center
     align-items: center
+    justify-content: center
 
 .skill-head-tr-appear, .skill-head-tr-enter
   transform: translateX(-200px)
